--- a/celeryadmin/templates/admin/celery-monitoring/index.html
+++ b/celeryadmin/templates/admin/celery-monitoring/index.html
@@ -1,2 +1,2 @@
 {% extends "admin/base_site.html" %}
-{% block title %}Test page{% endblock %}
+{% block title %}Celery Monitoring Page{% endblock %}
