--- a/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
+++ b/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
@@ -1,95 +1,229 @@
 {% extends 'admin/base_site.html' %}
 {% block title %}Celery Monitoring Page{% endblock %}
+
+{% block extrahead %}
+    <link rel="stylesheet" type="text/css"
+          href="/static/admin/css/changelists.css">
+    <script>
+        function run(operation, parameter) {
+            var url = "{% url 'dashboard' %}";
+            url += "?operation=" + operation + "&parameter=" + parameter;
+            var a = document.createElement('a');
+            a.href = url;
+            document.body.appendChild(a);
+            a.click();
+        }
+    </script>
+{% endblock %}
 {% block content %}
-    <div class='module'>
-        <table summary='Celery Workers'>
-            <thead>
-            <tr>
-                <th>
-                    Worker
-                </th>
-                <th>
-                    Status
-                </th>
-                <th>
-                    Concurrency
-                </th>
-                <th>
-                    Broker Transport
-                </th>
-                <th>
-                    Broker Hostname
-                </th>
-                <th>
-                    Broker Port
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for worker in dashboard.workers %}
-                <tr>
-                    <td>
-                        {{ worker.name }}
-                    </td>
-                    <td>
-                        {{ worker.status }}
-                    </td>
-                    <td>
-                        {{ worker.concurrency }}
-                    </td>
-                    <td>
-                        {{ worker.broker.transport }}
-                    </td>
-                    <td>
-                        {{ worker.broker.hostname }}
-                    </td>
-                    <td>
-                        {{ worker.broker.port }}
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    <h1>Workers</h1>
+    <div class="content-main">
+        <div class='module' id="changelist">
+            <div class="results">
+                <table id="result_list" summary='Celery Workers'>
+                    <thead>
+                    <tr>
+                        <th scope="col">
+                            Worker
+                        </th>
+                        <th scope="col">
+                            Status
+                        </th>
+                        <th scope="col">
+                            Concurrency
+                        </th>
+                        <th scope="col">
+                            Broker Transport
+                        </th>
+                        <th scope="col">
+                            Broker Hostname
+                        </th>
+                        <th scope="col">
+                            Broker Port
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for worker in dashboard.workers %}
+                        <tr class="row{{ forloop.counter }}">
+                            <td>
+                                {{ worker.name }}
+                            </td>
+                            <td>
+                                {{ worker.status }}
+                            </td>
+                            <td>
+                                {{ worker.concurrency }}
+                            </td>
+                            <td>
+                                {{ worker.broker.transport }}
+                            </td>
+                            <td>
+                                {{ worker.broker.hostname }}
+                            </td>
+                            <td>
+                                {{ worker.broker.port }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
+    <h1>Registered Tasks</h1>
+    <div class="content-main">
+        <div class='module' id="changelist">
+            <div class="results">
+                <table summary='Celery Registered Tasks'>
+                    <thead>
+                    <tr>
+                        <th scope="col">
+                            Name
+                        </th>
+                        <th scope="col">
+                            Workers
+                        </th>
+                        <th scope="col">
+                            Operation
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for task, workers in dashboard.registered_tasks.items %}
+                        <tr class="row{{ forloop.counter }}">
+                            <td>
+                                {{ task }}
+                            </td>
+                            <td>
+                                <ul>
+                                    {% for worker in workers %}
+                                        <li>
+                                            {{ worker }}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                            <td>
+                                <input type="submit" value="Execute"
+                                       onclick="run('execute','{{ task }}')">
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-    <div class='module'>
-        <table summary='Celery Registered Tasks'>
-            <thead>
-            <tr>
-                <th>
-                    Task
-                </th>
-                <th>
-                    Workers
-                </th>
-                <th>
-                    Operation
-                </th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for task, workers in dashboard.registered_tasks.items %}
-                <tr>
-                    <td>
-                        {{ task }}
-                    </td>
-                    <td>
-                        <ul>
-                            {% for worker in workers %}
-                                <li>
-                                    {{ worker }}
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </td>
-                <td>
-                    <input type="submit" value="Execute" onclick="executeTaskAsync('{{ task }}')">
-                </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    </div>
+
+    <h1>Active Tasks</h1>
+    <div class="content-main">
+        <div class='module' id="changelist">
+            <div class="results">
+                <table summary='Celery Active Tasks'>
+                    <thead>
+                    <tr>
+                        <th scope="col">
+                            Name
+                        </th>
+                        <th scope="col">
+                            Id
+                        </th>
+                        <th scope="col">
+                            Worker
+                        </th>
+                        <th scope="col">
+                            Queue
+                        </th>
+                        <th scope="col">
+                            Start Time
+                        </th>
+                        <th scope="col">
+                            Operation
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for task in dashboard.queue_tasks.active %}
+                        <tr class="row{{ forloop.counter }}">
+                            <td>
+                                {{ task.name }}
+                            </td>
+                            <td>
+                                {{ task.id }}
+                            </td>
+                            <td>
+                                {{ task.worker }}
+                            </td>
+                            <td>
+                                {{ task.queue }}
+                            </td>
+                            <td>
+                                {{ task.started_at }}
+                            </td>
+                            <td>
+                                <input type="submit" value="Revoke"
+                                       onclick="run('revoke','{{ task.id }}')">
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <h1>Reserved Tasks</h1>
+    <div class="content-main">
+        <div class='module' id="changelist">
+            <div class="results">
+                <table summary='Celery Reserved Tasks'>
+                    <thead>
+                    <tr>
+                        <th scope="col">
+                            Name
+                        </th>
+                        <th scope="col">
+                            Id
+                        </th>
+                        <th scope="col">
+                            Worker
+                        </th>
+                        <th scope="col">
+                            Queue
+                        </th>
+                        <th scope="col">
+                            Operation
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for task in dashboard.queue_tasks.reserved %}
+                        <tr class="row{{ forloop.counter }}">
+                            <td>
+                                {{ task.name }}
+                            </td>
+                            <td>
+                                {{ task.id }}
+                            </td>
+                            <td>
+                                {{ task.worker }}
+                            </td>
+                            <td>
+                                {{ task.queue }}
+                            </td>
+                            <td>
+                                <input type="submit" value="Revoke"
+                                       onclick="run('revoke','{{ task.id }}')">
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
