--- a/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
+++ b/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'admin/base_site.html' %}
-{% block title %}Celery Monitoring Page{% endblock %}
+{% block title %}Celery Monitoring Page | Dashboard{% endblock %}
 
 {% block extrahead %}
     <link rel="stylesheet" type="text/css"
