warning message shown on the dashboard page if there is no active worker

--- a/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
+++ b/sample_project/celeryadmin/templates/admin/celery-monitoring/dashboard.html
@@ -16,7 +16,7 @@
     </script>
 {% endblock %}
 {% block content %}
-    <h1>Workers</h1>
+    <h1>Workers {% if not dashboard.workers %} (There is no active worker) {% endif %}</h1>
     <div class="content-main">
         <div class='module' id="changelist">
             <div class="results">
